- Fixed hang in ASP.NET Web API exporter. #215
- Fixed ASP.NET Web API exporter exporting metrics from the wrong registry. #217
* 3.5.0
- Exposed metric.Unpublish() method since there was already a matching Publish() there.
- When the scrape is aborted, stop collecting/serializing metrics. #189
- Added simple metric export handler for legacy ASP.NET Web API, to avoid having to deal with HttpListener complexity.
* 3.4.0
- Separate packaging for ASP.NET Core 3 to reduce package reference management complexity for users. #164
- Lazy-initialize the default sample metrics to reduce initialization cost for those who do not need them. #170
- ASP.NET Core middlware no longer disposes of output stream. #171
- Fix DotNetStats occasional data tearing under parallel collections. #173
- Improved wording of some error messages. #169
- Added Counter.IncTo(), Gauge.IncTo(), Gauge.DecTo(). #181
- Added Gauge.Set(DateTimeOffset) and Gauge.IncTo(DateTimeOffset). #181
- Improve .NET Framework 4.6.1 packaging to include the ValueTuple reference automatically. #179
- ASP.NET Core HTTP metrics now capture route data before it is overwritten by an exception handler. #177
- ASP.NET Core HTTP "in progress" metrics now include controller/action labels (ASP.NET Core 3 only).
- Fixed concurrently defect in HTTP metrics that may have caused label values from wrong request to apply. #182
- The HttpListener based MetricServer can now handle more than one concurrent request.
- Added asynchronous "before collect" callbacks, giving user code more flexibility in metric updates.
- Added .Remove() to labeled metric instances for more convenient removal API (previously had to call method on parent instance).
- Added .Unpublish() to labeled metric instances to support temporary unpublishing of a metric, without discarding collected data (e.g. histogram buckets), during periods of data unavailability.
* 3.3.0
- Add ability to filter requests by port number when exporting metrics. #160
* 3.2.1